# VSCode_LPC1113

./: README.md  VSCode_LPC1113.code-workspace
LPC1113_GCC_VSCode_Uart/: .gitignore  CMakeLists.txt  README.md
LPC1113_GCC_VSCode_Uart/Linkerscripts/: lpc1113F_301.ld
LPC1113_GCC_VSCode_Uart/Main/: uart_echo.c
LPC1113_GCC_VSCode_Uart/Startup/: system_LPC11xx.c
LPC1113_GCC_VSCode_Uart/src/: led_funcs.c  uart_funcs.c
LPC1113_Test_1/: CMakeLists.txt  LPC1113_Test_1Config.h.in  README.md
LPC1113_Test_1/CMakeVariants/: cmake-variants.json
LPC1113_Test_1/Main/: main.cpp
LPC1113_Test_1/MathFunctions/: mysqrt.cpp
LPC1113_Test_2/: CMakeLists.txt  CreateFiles.bat  README.md  toolchain.cmake
LPC1113_Test_2/CMakeVariants/: cmake-variants.json
LPC1113_Test_2/Main/: main.c
LPC1113_Test_2/Startup/: startup_LPC11xx.S
LPC1113_Test_2/build_alt/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  LPC1113_Test_2.ilk  LPC1113_Test_2Config.h  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
LPC1113_Test_2/build_alt/MathFunctions/: CTestTestfile.cmake  cmake_install.cmake
LPC1113_Test_2/build_alt/src/: CTestTestfile.cmake  cmake_install.cmake
LPC1113_Uart_Cmd_02/: CMakeLists.txt  README.md  cmake-variants.json
LPC1113_Uart_Cmd_02/Main/: main.c
LPC1113_Uart_Cmd_02/Startup/: startup_LPC11xx.S
LPC1113_Uart_Cmd_02/inc/: charToInt.h  cmd_split.h  hexToInteger.h  isNumber.h  parse_for_response.h  uart_cmd.h  uart_line.h  uint32_t_ToHexString.h
LPC1113_Uart_Cmd_02/src/: charToInt.c  cmd_split.c  hexToInteger.c  isNumber.c  parse_for_response.c  uart_cmd.c  uart_line.c  uart_utils.c  uint32_t_ToHexString.c
LPC1113_Uart_Event/: CMakeLists.txt  LPC1113_Uart_Event.uvguix.Roland  LPC1113_Uart_Event.uvoptx  LPC1113_Uart_Event.uvprojx  README.md
LPC1113_Uart_Event/Main/: main.c
LPC1113_Uart_Event/RTE/_Target_1/: RTE_Components.h
TemporaryStorage/: cmsis_compiler.h  lpc11_crp.h
TemporaryStorage/Source/: CMakeLists.txt  lpc11xx_crp.c_  lpc11xx_crt0.c  lpclib_assert.c
TemporaryStorage/lpc11xx/: syscon.h
